--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,13 @@
+:root {
+    --width: 150px;
+    --text-align: center;
+    --height: auto;
+}
+
 main {
     max-width: 840px;
 }
+
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -17,8 +24,8 @@ h1 {
 }
 
 img {
-    width: 150px;
-    height: auto;
+    width: var(--width);
+    height: var(--height);
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
@@ -35,21 +42,21 @@ aside {
     padding: 1rem;
     background-color: #eee;
     color: #333;
-    text-align: center;
+    text-align: var(--text-align);
 }
 
 aside img {
     width: 200px;
-    height: auto;
+    height: var(--height);
 }
 
 main img {
-    width: 150px;
-    height: auto;
+    width: var(--width);
+    height: var(--height);
 }
 
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
-    text-align: center;
+    text-align: var(--text-align);
 }
