--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,12 @@
     --height: auto;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 main {
     max-width: 840px;
 }
@@ -37,12 +43,8 @@ p {
 
 aside {
     width: 20em;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
     text-align: var(--text-align);
+    position: relative;
 }
 
 aside img {
@@ -50,13 +52,31 @@ aside img {
     height: var(--height);
 }
 
+aside h2 {
+    position: absolute;
+    top: 20px;
+    left: 120px;
+}
+
 main img {
     width: var(--width);
     height: var(--height);
+    float: right;
 }
 
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: var(--text-align);
+}
+
+/* class selectors */
+
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    background-color: #ddd;
+    color: #000;
+    clear: both;
 }
