--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -24,6 +24,23 @@ footer {
     margin: 0 auto;
 }
 
+header {
+    margin: 30px auto;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+.navigation {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.navigation a {
+    text-decoration: none;
+}
+
 h1,
 h2 {
     font-family: var(--heading-font);
@@ -74,4 +91,74 @@ article {
     width: 125px;
     margin: 5px;
     border: 1px solid black;
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: auto auto;
+    gap: 1rem;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.history h2 {
+    grid-column: 1 / -1;
+    justify-self: center;
+}
+
+.history p,
+.history img {
+    width: 100%;
+}
+
+.adventure {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.adventure-figures {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.adventure figure {
+    width: 150px;
+}
+
+.adventure img {
+    width: 100%;
+    height: auto;
+}
+
+.adventure h2 {
+    margin-bottom: 15px;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+footer p {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.socialmedia {
+    display: flex;
+    gap: 1rem;
+}
+
+.socialmedia img {
+    width: 30px;
 }
